Don't translate strings

--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -96,7 +96,7 @@
         </div>
         <div class="modal-body">
           <div class="alert alert-danger"><strong>WARNING:</strong> This will delete all locations. This means that everything else &ndash; checklists, incidents, participants will be invalid, and also deleted. Only use this if you are <strong><em>absolutely</em></strong> sure that this is what you want, and you accept responsibility for the resulting data loss.</div>
-          <p>Please enter <code id="compare">{{ _('DELETE') }}</code> below to proceed:</p>
+          <p>Please enter <code id="compare">DELETE</code> below to proceed:</p>
           <div class="form-group">
             <input class="form-control" id="prompt">
           </div>
