--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -156,7 +156,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
           </div>
           <div class="modal-body">
             <div class="alert alert-danger"><strong>WARNING:</strong> This will delete all participants, as well as any data linked to them &ndash; checklists and incidents. Only use this if you're <strong><em>absolutely</em></strong> sure this is what you want, and you accept responsibility for all data lost.</div>
-            <p>Please enter <code id="compare">{{ _('DELETE') }}</code> below to proceed:</p>
+            <p>Please enter <code id="compare">DELETE</code> below to proceed:</p>
             <div class="form-group">
               <input class="form-control" id="prompt">
             </div>
