updated admin divisions builder

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -122,7 +122,7 @@
 {%- endif -%}
 <div class="row">
   <div class="col-md-10 col-md-offset-2">
-    <div id="paper" style="margin-top: 5em" data-graph='{{ g.deployment.administrative_divisions_graph }}'></div>
+    <div id="paper" style="margin-top: 5em" data-graph='{{ location_set.admin_divisions_graph }}'></div>
   </div>
 </div>
 {% endblock %}
