--- a/apollo/frontend/templates/frontend/location_set_list.html
+++ b/apollo/frontend/templates/frontend/location_set_list.html
@@ -37,7 +37,7 @@
           <td>{{ location_set.name }}</td>
           <td>{{ location_set.events|length }}</td>
           <td>{{ location_set.location_types|length }}</td>
-          <td>Manage</td>
+          <td><a href="{{ url_for('locations.locations_builder', location_set_id=location_set.id) }}">Manage</a></td>
           <td>{{ location_set.locations|length }}</td>
           <td><a href="{{ url_for('locations.location_list', location_set_id=location_set.id) }}">Manage</a></td>
           <td>{{ location_set.samples|length }}</td>
