--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -121,7 +121,7 @@
         <h3>Upload File</h3>
 
         <div class="wizard-input-section">
-        <form enctype="multipart/form-data" method="POST" id="upload-form" action="{{ url_for('locations.locations_import') }}"><input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+        <form enctype="multipart/form-data" method="POST" id="upload-form" action="{{ url_for('locations.locations_import', location_set_id=location_set_id) }}"><input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="form-group">
             <div class="col-sm-9">
               <div class="row">
