--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -1,4 +1,4 @@
-{% macro render_filter_form(form, location) %}
+{% macro render_filter_form(form, location, location_set_id) %}
 <form class="form-inline">
     <div class="form-group">
     {{ form.participant_id(class_='form-control span2 input-sm', placeholder=_('Participant ID')) }}
@@ -6,12 +6,14 @@
     <div class="form-group">
     {{ form.name(class_='form-control span2 input-sm', placeholder=_('Name')) }}
     </div>
+    {% if location_set_id %}
     <div class="form-group">
     {{ form.location(class_='select2-container span4 select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
     </div>
     <div class="form-group">
     {{ form.sample(class_='form-control span2 input-sm') }}
     </div>
+    {% endif %}
     <div class="form-group">
     {{ form.phone(class_='form-control span2 input-sm', placeholder=_('Phone')) }}
     </div>
