Updated templates with form sets

--- a/apollo/frontend/templates/frontend/form_edit.html
+++ b/apollo/frontend/templates/frontend/form_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
 <div class="col-md-8 col-md-offset-2">
-{{ render_edit_form(form) }}
+{{ render_edit_form(form, form_set_id) }}
 </div>
 </div>
 {% endblock %}
