--- a/apollo/frontend/templates/frontend/form_set_list.html
+++ b/apollo/frontend/templates/frontend/form_set_list.html
@@ -19,6 +19,7 @@
             <tr>
               <th>{{ _('Name') }}</th>
               <th>{{ _('# linked events') }}</th>
+              <th colspan="2">{{ _('Forms') }}</th>
             </tr>
           </thead>
           <tbody>
@@ -26,6 +27,8 @@
             <tr>
               <td>{{ form_set.name }}</td>
               <td>{{ form_set.events|length }}</td>
+              <td>{{ form_set.forms|length }}</td>
+              <td><a href="{{ url_for('forms.list_forms', form_set_id=form_set.id) }}">{{ _('Manage') }}</a></td>
             </tr>
             {% else %}
             <tr class="warning">
