--- a/apollo/frontend/templates/frontend/form_list.html
+++ b/apollo/frontend/templates/frontend/form_list.html
@@ -1,7 +1,7 @@
 {% extends "frontend/_layout.html" %}
 {% block toolbar %}
 <a class="btn btn-sm btn-warning pull-right" data-toggle="modal" data-target="#checklistModal" href="#"><span class="glyphicon glyphicon-list-alt"></span> {{ _('Create checklists') }}</a>
-<a class="btn btn-sm btn-default pull-right" href="{{ url_for('forms.new_form') }}" style="margin-right: 1em"><span class="glyphicon glyphicon-plus"></span> {{ _('Add form') }}</a>
+<a class="btn btn-sm btn-default pull-right" href="{{ url_for('forms.new_form', form_set_id=form_set_id) }}" style="margin-right: 1em"><span class="glyphicon glyphicon-plus"></span> {{ _('Add form') }}</a>
 {% endblock %}
 {% block content %}
 {% with messages = get_flashed_messages(category_filter=['checklist_init_success']) %}
@@ -50,14 +50,14 @@
       {% for form in forms %}
         <tr>
           <td style="vertical-align: middle">{{ form.name }}</td>
-          <td style="vertical-align: middle"><span class="label {% if form.form_type == 'CHECKLIST' %}label-primary{% else %}label-default{% endif %}">{{ form.form_type }}</span></td>
+          <td style="vertical-align: middle"><span class="label {% if form.form_type == 'CHECKLIST' %}label-primary{% else %}label-default{% endif %}">{{ form.get_form_type_display() }}</span></td>
           <td><ul class="nav nav-pills">
             <li role="presentation" class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ _('Form Actions') }} <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="{{ url_for('forms.edit_form', pk=form.pk) }}">{{ _('Properties') }}</a></li>
-                <li><a href="{{ url_for('forms.form_builder', pk=form.pk) }}">{{ _('Builder') }}</a></li>
-                {% if form.form_type == 'CHECKLIST' %}<li><a href="{{ url_for('forms.quality_assurance', pk=form.pk) }}">{{ _('Quality Assurance') }}</a></li>{% endif %}
+                <li><a href="{{ url_for('forms.edit_form', form_set_id=form_set_id, form_id=form.id) }}">{{ _('Properties') }}</a></li>
+                <li><a href="{{ url_for('forms.form_builder', id=form.id) }}">{{ _('Builder') }}</a></li>
+                {% if form.form_type == 'CHECKLIST' %}<li><a href="{{ url_for('forms.quality_assurance', form_set_id=form_set_id, form_id=form.id) }}">{{ _('Quality Assurance') }}</a></li>{% endif %}
               </ul>
             </li>
           </ul></td>
@@ -65,7 +65,7 @@
       {% endfor %}
       </tbody>
     </table>
-    <form class="form-horizontal" method="POST" action="{{ url_for('forms.checklist_init') }}" id="checklistInitForm">
+    <form class="form-horizontal" method="POST" action="{{ url_for('forms.checklist_init', form_set_id=form_set_id) }}" id="checklistInitForm">
       <div class="modal fade" id="checklistModal" tabindex="-1" role="dialog" aria-labelledby="checklistModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -74,16 +74,16 @@
               <h4 class="modal-title" id="checklistModalLabel">{{ _('Create checklists') }}</h4>
             </div>
             <div class="modal-body">
-                {{ init_form.hidden_tag() }}
-                <div class="form-group">
-                  <label for="{{ init_form.form.id }}" class="col-sm-3">{{ _('Checklist form') }}</label> <div class="col-sm-9">{{ init_form.form(class_='form-control') }}</div>
-                </div>
-                <div class="form-group">
-                  <label for="{{ init_form.role.id }}" class="col-sm-3">{{ _('Role') }}</label> <div class="col-sm-9">{{ init_form.role(class_='form-control') }}</div>
-                </div>
-                <div class="form-group">
-                  <label for="{{ init_form.location_type.id }}" class="col-sm-3">{{ _('Location type') }}</label> <div class="col-sm-9">{{ init_form.location_type(class_='form-control') }}</div>
-                </div>
+              {{ init_form.hidden_tag() }}
+              <div class="form-group">
+                <label for="{{ init_form.form.id }}" class="col-sm-3">{{ _('Checklist form') }}</label> <div class="col-sm-9">{{ init_form.form(class_='form-control') }}</div>
+              </div>
+              <div class="form-group">
+                <label for="{{ init_form.role.id }}" class="col-sm-3">{{ _('Role') }}</label> <div class="col-sm-9">{{ init_form.role(class_='form-control') }}</div>
+              </div>
+              <div class="form-group">
+                <label for="{{ init_form.location_type.id }}" class="col-sm-3">{{ _('Location type') }}</label> <div class="col-sm-9">{{ init_form.location_type(class_='form-control') }}</div>
+              </div>
             </div>
             <div class="modal-footer">
               <button type="submit" class="btn btn-warning">{{ _('Create checklists') }}</button>
