modified LocationSet admin list to show links for managing locations and location types
also modified relationships in the LocationSet
model to lazy load locations and location_types so
as to optimize database queries when fetching
these resources (in other words, use queries as
much as possible)

--- a/apollo/frontend/templates/admin/base.html
+++ b/apollo/frontend/templates/admin/base.html
@@ -1,5 +1,6 @@
 {% import 'admin/layout.html' as layout with context -%}
 {% import 'admin/static.html' as admin_static with context %}
+{% from 'admin/macros.html' import locations_builder, locations_list %}
 <!DOCTYPE html>
 <html>
   <head>
